# GANPI

./: .gitignore  BUILD_AND_RUN_INSTRUCTIONS.md  CMakeLists.txt  CMakeLists_simple.txt  CMakeLists_windows.txt  CONTRIBUTING.md  CURRENT_DIRECTORY_FIX.md  ENHANCED_CONTEXT.md  ENHANCEMENT_SUMMARY.md  FILE_SYSTEM_CONTEXT.md  LICENSE  NESTED_PATH_FIX.md  PATH_VALIDATION.md  README.md  README.txt  SETUP_INSTRUCTIONS.md  UNIX_STYLE_COMMANDS.md  WINDOWS_COMMAND_FIX.md  build.bat  build.sh  build_windows.bat  run_ganpi.bat
examples/: demo_commands.txt
include/: ganpi.h
scripts/: install_dependencies.sh  run_tests.sh
src/: command_executor.cpp  command_executor_windows.cpp  config.cpp  ganpi.cpp  gemini_client.cpp  gemini_client_simple.cpp  gemini_client_windows.cpp  main.cpp
testing/: main.cc
